Fix for Custom logo not showing fully with the feedback button.

--- a/ROOT-Maven/src/main/webapp/static/css/ev_common_sciverse.css
+++ b/ROOT-Maven/src/main/webapp/static/css/ev_common_sciverse.css
@@ -146,7 +146,7 @@ label {margin-right: 5px}
 #suites ul.suites li a.selected {font-weight:bold;}
 #suites ul.suites li a.last {background:none;}
 
-#login {position:absolute; top:7px; right:3px; z-index:350; background:#fff; }
+#login {position:absolute; top:7px; right:3px; z-index:0; background:#fff; }
 #loginBox a {color:#0156AA;font-size: 12px;}
 #login ul li a {padding:0px 8px 0px 8px; color:#0156AA; text-decoration: none}
 #login ul li {list-style:none;  padding-right:5px; float:left; font-size:12px; background:url(/static/images/divider_login.gif) no-repeat 100% 50%;}
